ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-ingress
  labels:
    app: test-ingress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-ingress
  template:
    metadata:
      labels:
        app: test-ingress
    spec:
      nodeSelector:
        lts: lts
      containers:
        - name: test-ingress
          image: jupyter-test:v1
          ports:
            - containerPort: 22
              name: ssh
            - containerPort: 8888
              name: http

---
apiVersion: v1
kind: Service
metadata:
  name: test-ingress
spec:
  type: NodePort
  selector:
    app: test-ingress
  ports:
    - name: ssh
      port: 22
      targetPort: 22
    - name: http
      port: 8888
      targetPort: 8888

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gpu-pod-ingress
spec:
  rules:
    - host: containercloud.xaidc.com
      http:
        paths:
          - path: /instance
            pathType: Prefix
            backend:
              service:
                name: test-ingress
                port:
                  number: 8888
